# MrrlSort

./: .gitignore  Cargo.toml  README.md
benches/: sort.rs
proptest-regressions/: choose.txt  roll.txt  sort.txt
proptest-regressions/merge/: quadratic.txt  superblock.txt
src/: extract_buf.rs  lib.rs  merge_buf.rs  merge_no_buf.rs  quadratic_sort.rs  search.rs  sort.rs  split.rs  test_utils.rs
src/block/: merge.rs  mod.rs  roll.rs
