[package]
name = "mrrl-sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contracts = { path = "../contracts", features = [] }
either = "1.6.1"
mirai-annotations = "1.12.0"
static_assertions = "1.1.0"

[dev-dependencies]
criterion = "0.3.5"
proptest = "1.0.0"
rand = { version = "0.8.4", features = ["small_rng"] }

[[bench]]
name = "sort"
harness = false
